# template-fastapi-react-k8s

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  model.schema.json  pyproject.toml
.github/workflows/: deploy.yml  model.yml  python.yml  react.yml
api/: main.py  model.py
k8s/: create-service-account.sh  deployment.yml  encrypt.yml  ingress.yml  login.sh  service.yml
scripts/: gen_model_schema.py
tests/: test_app.py
web/: .gitignore  eslint.config.mjs  package.json
web/src/: App.test.tsx  App.tsx  api.ts  index.tsx  model.d.ts
