[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ryan Wiesenberg <me@rwies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.1"
poetry = "^1.8.3"
pytest = "^8.3.2"
isort = "^5.13.2"

[tool.poetry.scripts]
server = "api.main:run"
gen-model = "scripts.gen_model_schema:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
